--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -53,11 +53,11 @@
 <!ENTITY Ctr_tabwidthinfo	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabMixPlus»">
 <!ENTITY Ctr_tabwidthinfo2	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabUtilities»">
 <!ENTITY Ctr_tabwidthinfo3	"Τιμές κάτω από 48px θα προκαλέσουν δυσλειτουργίες στις περισσότερες περιπτώσεις!">
-<!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_square_edges	"Τετραγωνισμένες γωνίες κορυφής">
 <!ENTITY Ctr_tabinsertion	"Εισαγωγή συναφούς καρτέλας μετά την τρέχουσα καρτέλα (προτίμηση about:config)">
 <!ENTITY Ctr_emptyfavicon	"Επαναφορά κενού εικονιδίου (εάν ένας ιστότοπος δεν διαθέτει εικονίδιο)">
-<!ENTITY Ctr_noemptypticon	"Αφαίρεση κενού εικονιδίου από καρτέλες εφαρμογών">
-<!ENTITY Ctr_e10stab_notd	"Καρτέλες E10s: αφαίρεση υπογράμμισης">
+<!ENTITY Ctr_noemptypticon	"Απομάκρυνση κενού εικονιδίου από καρτέλες εφαρμογών">
+<!ENTITY Ctr_e10stab_notd	"Καρτέλες E10s: απομάκρυνση υπογράμμισης">
 <!ENTITY Ctr_closetab_0		"Κλείσιμο καρτέλας">
 <!ENTITY Ctr_closetab_1		"Μόνο στην ενεργή καρτέλα">
 <!ENTITY Ctr_closetab_2		"Πουθενά">
@@ -65,7 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Στην αρχή της εργαλειοθήκης καρτελών">
 <!ENTITY Ctr_closetab_5		"Σε όλες τις καρτέλες (επιβεβλημένα)">
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
-<!ENTITY Ctr_closei_def		"Default icons">
+<!ENTITY Ctr_closei_def		"Προεπιλεγμένα εικονίδια">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
 <!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (προτίμηση about:config)">
 
@@ -95,10 +95,10 @@
 <!ENTITY Ctr_appbuttonI1e	"Δεν είναι ορατό στη γραμμή τίτλου του Λ.Σ. Windows, μόνο στη γραμμή τίτλου του &brandShortName;!">
 <!ENTITY Ctr_appbuttonI2	"Τα χρώματα του κουμπιού είναι ορατά μόνο στη γραμμή τίτλου και στην εργαλειοθήκη καρτελών!">
 <!ENTITY Ctr_appbutmhi		"Υψηλότερη θέση (εάν είναι στην εργαλειοθήκη καρτελών)">
-<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
+<!ENTITY Ctr_appbautocol	"Ορισμός προεπιλεγμένου χρώματος / Aurora / Nightly αυτόματα">
 <!ENTITY Ctr_appbutbdl		"Απόκρυψη περιγραμμάτων και χρωμάτων φόντου">
 <!ENTITY Ctr_dblclclosefx	"Κλείσιμο τρέχοντος παραθύρου με διπλό κλικ">
-<!ENTITY Ctr_appbclmmenus	"Επιλέξιμα με κλικ μενού, μέσα στο μενού του κουμπιού («Νέα καρτέλα», «Εκτύπωση...»)">
+<!ENTITY Ctr_appbclmmenus	"Επιλέξιμα με κλικ μενού, μέσα στο μενού του κουμπιού («Νέα καρτέλα», «Εκτύπωση…»)">
 <!ENTITY Ctr_appbutonclab	"Τίτλος">
 <!ENTITY Ctr_appbutonclab2	"Προσθέστε τίτλο ή αφήστε τη γραμμή κενή">
 
@@ -138,12 +138,12 @@
 <!ENTITY Ctr_cpanelmenus	"Μενού πίνακα: συνεπτυγμένη προβολή (σελιδοδείκτες, ιστορικό κλπ.)">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_addonmanager	"Add-on manager">
+<!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
 <!ENTITY Ctr_alt_addonsp	"Σελίδα επεκτάσεων «Περισσότερα»: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
-<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
-<!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
-<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
+<!ENTITY Ctr_alt_addonsm	"Διαχειριστής πρόσθετων: εναλλακτική εμφάνιση">
+<!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων διαχειριστή πρόσθετων: απόκρυψη προειδοποιήσεων">
+<!ENTITY Ctr_addonversion	"Λίστες πρόσθετων διαχειριστή πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
+<!ENTITY Ctr_xpinstallui	"Διαχειριστής πρόσθετων: παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση μενού πίνακα">
 <!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
 
-<!ENTITY Ctr_tabsep_def		"Default tab separators">
+<!ENTITY Ctr_tabsep_def		"Προεπιλεγμένα διαχωριστικά καρτελών">
 <!ENTITY Ctr_fxmockup		"Μακέτα &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Άσπρο χρώμα κουμπιών καρτελών (κλείσιμο, νέα, ομάδες, λίστα όλων)">
 <!ENTITY Ctr_tabmokcolor2	"Άσπρο χρώμα και σκοτεινή σκιά κειμένου μη ενεργών καρτελών">
@@ -161,8 +161,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Άνοιγμα σε νέα καρτέλα με κλικ στον ενδείκτη δραστηριότητας, της ακόλουθης διεύθυνσης url:">
 <!ENTITY Ctr_navthrobber2	"Προσθέστε διεύθυνση url ή αφήστε τη γραμμή κενή">
-<!ENTITY Ctr_anewtaburl		"New tab page url">
-<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
+<!ENTITY Ctr_anewtaburl		"URL σελίδας νέας καρτέλας">
+<!ENTITY Ctr_anewtaburlcb	"Προσαρμοσμένο url σελίδας νέας καρτέλας (προεπιλογή: «about:newtab»)">
 
 <!ENTITY Ctr_tab_tf_info1	"Ονόματα χρωμάτων, δεκαεξαδικοί κωδικοί, τιμές rgb(a) και hsl(a) υποστηρίζονται.">
 <!ENTITY Ctr_tab_tf_info2	"Οι εισηγμένες τιμές δεν θα επικυρωθούν!">
@@ -191,7 +191,7 @@
 <!ENTITY Ctr_starinurl		"Κουμπί-αστέρι">
 <!ENTITY Ctr_feedinurl		"Κουμπί «Συνδρομή» (RSS)">
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
-<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlgo		"Απόκρυψη κουμπιού «Μετάβαση»">
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
@@ -226,43 +226,43 @@
 <!ENTITY Ctr_hidetbwote		"Μείωση καθυστέρησης απόκρυψης κατά την εκκίνηση">
 <!ENTITY Ctr_hidetbwote_i	"Ενδέχεται να προκαλέσει δυσλειτουργίες στην εργαλειοθήκη καρτελών">
 <!ENTITY Ctr_hidetbwote2	"Διατήρηση γραμμής τίτλου (καρτέλες στο πάνω μέρος)">
-<!ENTITY Ctr_notabfog		"Αφαίρεση ομίχλης φόντου (Windows AeroGlass/8)">
-<!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
+<!ENTITY Ctr_notabfog		"Απομάκρυνση ομίχλης φόντου (Windows AeroGlass/8)">
+<!ENTITY Ctr_notabbg		"Απομάκρυνση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
 <!ENTITY Ctr_alttabstb		"Εναλλακτικό χρώμα φόντου">
 <!ENTITY Ctr_alttabstb2		"Σε λειτουργία μεγιστοποίησης (καρτέλες στο πάνω μέρος)">
 
 <!ENTITY Ctr_altmenubar		"Προσθήκη χρώματος φόντου (γραμμή τίτλου Λ.Σ.)">
 <!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση (παρακάτω από τη γραμμή τίτλου του &brandShortName;)">
-<!ENTITY Ctr_menubarnofog	"Αφαίρεση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
+<!ENTITY Ctr_menubarnofog	"Απομάκρυνση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
-<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες και καρτέλες">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
+<!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Εργαλειοθήκη πλοήγησης: απόκρυψη εργαλειοθήκης">
-<!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: αφαίρεση χρώματος φόντου">
-<!ENTITY Ctr_bookbarfs		"Εργαλειοθήκη σελιδοδεικτών: Σε προβολή πλήρους οθόνης">
-<!ENTITY Ctr_nonavbarbg		"Εργαλειοθήκη πλοήγησης: αφαίρεση χρώματος φόντου">
+<!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: Απομάκρυνση χρώματος φόντου">
+<!ENTITY Ctr_bookbarfs		"Εργαλειοθήκη σελιδοδεικτών: εμφάνιση σε προβολή πλήρους οθόνης">
+<!ENTITY Ctr_nonavbarbg		"Εργαλειοθήκη πλοήγησης: Απομάκρυνση χρώματος φόντου">
 <!ENTITY Ctr_nonavbarbg1	"Επηρεάζονται επίσης οι επιπρόσθετες εργαλειοθήκες αυτής της επέκτασης και άλλες εργαλειοθήκες κορυφής.">
 <!ENTITY Ctr_nonavbarbg2	"Επηρεάζονται όλες οι εργαλειοθήκες σε λειτουργία «Slim Chrome» της επέκτασης «The Fox, Only Better».">
 <!ENTITY Ctr_nonavborder	"Εργαλειοθήκη σελιδοδεικτών: προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
-<!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: αφαίρεση περιγραμμάτων εργαλειοθήκης">
+<!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: Απομάκρυνση περιγραμμάτων εργαλειοθήκης">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
 <!ENTITY Ctr_notextshadow	"Εργαλειοθήκες: απόκρυψη σκιάς κειμένου εργαλειοθηκών και καρτελών">
-<!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («σιρίτι») στο τέλος της εργαλειοθήκης">
+<!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («Περισσότερα εργαλεία…») στο τέλος της εργαλειοθήκης">
 <!ENTITY Ctr_tbsep_winc		"Εργαλειοθήκες κορυφής: επιπρόσθετα διαχωριστικά εργαλειοθηκών">
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
-<!ENTITY Ctr_addonbarfs		"Σε προβολή πλήρους οθόνης">
+<!ENTITY Ctr_addonbarfs		"Εμφάνιση σε προβολή πλήρους οθόνης">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
-<!ENTITY Ctr_tabthrobber	"Default loading image">
+<!ENTITY Ctr_tabthrobber	"Προεπιλεγμένο εικονίδιο φόρτωσης">
 <!ENTITY Ctr_bmanimation	"Κινησιομοίωση προσθήκης σελιδοδείκτη">
 <!ENTITY Ctr_pananimation	"Κινησιομοίωση ανοίγματος μενού πίνακα">
 <!ENTITY Ctr_tabanimation	"Κινησιομοίωση κλεισίματος/ανοίγματος καρτέλας (προτίμηση about:config)">
 <!ENTITY Ctr_dlanimation	"Κινησιομοίωση ειδοποίησης λήψης (προτίμηση about:config)">
-<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
-<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
+<!ENTITY Ctr_fsanimation	"Κινησιομοίωση πλήρους οθόνης (προτίμηση about:config)">
+<!ENTITY Ctr_fsaduration	"Κινησιομοίωση πλήρους οθόνης για περιεχόμενο HTML5 (προτιμήσεις about:config)">
 
 <!ENTITY Ctr_toolsitem		"Στοιχείο μενού στο μενού «Εργαλεία»">
 <!ENTITY Ctr_appmenuitem	"Στοιχείο μενού στο μενού του κουμπιού εφαρμογής">
@@ -275,21 +275,21 @@
 <!ENTITY Ctr_nodevtheme		"Αποτροπή ενεργοποίησης του «Θέματος έκδοσης για προγραμματιστές»">
 
 <!ENTITY Ctr_experttweaks	"Προηγμένες">
-<!ENTITY Ctr_fx34search		"Ο &brandShortName; 34+ εισήγαγε μία «νέα διεπαφή αναζήτησης». Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται η προηγούμενη διεπαφή.">
-<!ENTITY Ctr_fx34loop		"Ο &brandShortName; 34+ εισήγαγε δυνατότητες «κλήσης και συνομιλίας». Αποεπιλέγοντας αυτή την προτίμηση αφαιρούνται αυτές οι δυνατότητες.">
-<!ENTITY Ctr_fx35devtheme	"Ο &brandShortName; 35+ εισήγαγε ένα νέο «Θέμα για προγραμματιστές». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιούνται το «Θέμα για προγραμματιστές» και το κουμπί του στη λειτουργία προσαρμογής.">
-<!ENTITY Ctr_fx36prefs		"Ο &brandShortName; 36+ εισήγαγε προβολή επιλογών σε καρτέλα. Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται το παλιό παράθυρο επιλογών.">
-<!ENTITY Ctr_fx38reader		"Ο &brandShortName; 38+ εισήγαγε μια νέα «λειτουργία ανάγνωσης». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιείται και αφαιρείται το εικονίδιό της από τη γραμμή τοποθεσιών.">
-<!ENTITY Ctr_fx38pocket		"Ο &brandShortName; 38.0.5+ εισήγαγε το χαρακτηριστικό «Pocket». Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται και αφαιρείται το κουμπί του από τις εργαλειοθήκες.">
-<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
+<!ENTITY Ctr_fx34search		"&brandShortName; 34+: Αποεπιλέγοντας αυτή την προτίμηση απομακρύνεται η νέα εμφάνιση διεπαφής αναζήτησης και επαναφέρεται η παλιότερη διεπαφή.">
+<!ENTITY Ctr_fx34loop		"&brandShortName; 34+: Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι δυνατότητες «κλήσης και συνομιλίας».">
+<!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+: Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιείται το «Θέμα για προγραμματιστές».">
+<!ENTITY Ctr_fx36prefs		"&brandShortName; 36+: Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται το παλιό παράθυρο επιλογών.">
+<!ENTITY Ctr_fx38reader		"&brandShortName; 38+: Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται η «λειτουργία ανάγνωσης» και απομακρύνεται το εικονίδιό της από τη γραμμή τοποθεσιών.">
+<!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+: Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται το χαρακτηριστικό «Pocket» και απομακρύνεται το κουμπί του από τις εργαλειοθήκες.">
+<!ENTITY Ctr_fx38pocket2	"Σημείωση: Μετακινώντας το κουμπί του «Pocket» στην παλέτα προσαρμογής πριν από την απενεργοποίηση αυτής της προτίμησης, απομακρύνονται επίσης και οι καταχωρίσεις του «Pocket» από τα μενού σελιδοδεικτών και αναγνώστη.">
 <!ENTITY Ctr_e_searchui		"Εμφάνιση αναζήτησης">
 <!ENTITY Ctr_e_loop			"Κλήση και συνομιλία">
 <!ENTITY Ctr_e_deved		"Θέμα έκδοσης για προγραμματιστές">
 <!ENTITY Ctr_e_prefsui		"Επιλογές σε καρτέλα">
 <!ENTITY Ctr_e_readermode	"Λειτουργία ανάγνωσης">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
-<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
+<!ENTITY Ctr_e_tabsaudioico	"Εικονίδιο αναπαραγωγής ήχου σε καρτέλες">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Αποεπιλέγοντας αυτή την προτίμηση απομακρύνεται το εικονίδιο αναπαραγωγής ήχου από τις καρτέλες.">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_pw_set_export	"Εξαγωγή προτιμήσεων">
 <!ENTITY Ctr_pw_set_import	"Εισαγωγή προτιμήσεων">
 <!ENTITY Ctr_pw_set_syncon	"Προσθήκη στο «Sync»">
-<!ENTITY Ctr_pw_set_syncoff	"Αφαίρεση από το «Sync»">
+<!ENTITY Ctr_pw_set_syncoff	"Απομάκρυνση από το «Sync»">
 
 <!ENTITY Ctr_special_font	"Οι ρυθμίσεις χρώματος φόντου είναι για το προεπιλεγμένο θέμα μόνο!">
 <!ENTITY Ctr_special_info	"Ορισμένες επιλογές ενδέχεται να μην προσφέρουν ορατές αλλαγές σε όλες τις περιπτώσεις">
@@ -311,7 +311,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Άνοιγμα σε νέο παράθυρο ιδιωτικής περιήγησης">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"θ">
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
-<!ENTITY goCmd.label		"Go">
+<!ENTITY goCmd.label		"Μετάβαση">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "Π">
