--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -143,7 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
 <!ENTITY Ctr_am_nowarning	"附加组件管理器列表: 隐藏警告">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
-<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
+<!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
 <!ENTITY Ctr_bmbutnotext	"书签菜单按钮: 隐藏书签工具栏上的文本标签">
 <!ENTITY Ctr_skipprintpr	"打印按钮: 跳过打印预览">
@@ -256,7 +256,7 @@
 <!ENTITY Ctr_addonbarfs		"在全屏模式">
 
 <!ENTITY Ctr_animation		"动画">
-<!ENTITY Ctr_tabthrobber	"默认的正在加载图片">
+<!ENTITY Ctr_tabthrobber	"默认正在加载图片">
 <!ENTITY Ctr_bmanimation	"加入书签动画">
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画 (about:config 选项)">
