--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Öffne weitere Adressleiste (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Menüschaltflächen-Aufklappmenü: verstecke Schaltflächen-Text">
 <!ENTITY Ctr_menupopupscr	"Aufklappmenüs: ersetze Navigationspfeile durch Bildlaufleisten">
+<!ENTITY Ctr_closegeneral	"Schließen-Symbole">
 
 <!ENTITY Ctr_tabsep_def		"Standard Trennlinien">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Entwürfe">
