--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Άνοιγμα επιπρόσθετης γραμμής τοποθεσιών (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
+<!ENTITY Ctr_closegeneral	"General close icons">
 
 <!ENTITY Ctr_tabsep_def		"Προεπιλεγμένα διαχωριστικά καρτελών">
 <!ENTITY Ctr_fxmockup		"Μακέτα &brandShortName;">
