--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Ava lisa-aadressiriba (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Paneelimenüü hüpik: peida nupu sildid">
 <!ENTITY Ctr_menupopupscr	"Menüühüpikud: näita kerimisnoolte asemel kerimisribasid">
+<!ENTITY Ctr_closegeneral	"General close icons">
 
 <!ENTITY Ctr_tabsep_def		"Vaikimisi kaartide eraldajad">
 <!ENTITY Ctr_fxmockup		"&brandShortName;i visand">
