--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Ouvrir la barre d'adresse additionelle (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Panneau menu : icônes seules">
 <!ENTITY Ctr_menupopupscr	"Menus pop-up : afficher des ascenseurs au lieu des flèches de défilement">
+<!ENTITY Ctr_closegeneral	"General close icons">
 
 <!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Mockup">
