--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Apri una barra degli indirizzi supplementare (Cmd/Ctrl+)">
 <!ENTITY Ctr_pmhidelabels	"Mostra solo le icone nel pannello menu">
 <!ENTITY Ctr_menupopupscr	"Utilizza barra di scorrimento al posto delle frecce nei menu di popup">
+<!ENTITY Ctr_closegeneral	"General close icons">
 
 <!ENTITY Ctr_tabsep_def		"Separatori schede predefiniti">
 <!ENTITY Ctr_fxmockup		"Mockup">
