--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -111,6 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
+<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
 <!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
@@ -152,7 +153,7 @@
 <!ENTITY Ctr_extraurlkeycb	"Otwórz dodatkowy pasek adresu (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: ukryj etykiety przycisku">
 <!ENTITY Ctr_menupopupscr	"Menu kontekstowe: pokaż pasek przewijania zamiast strzałek przewijania">
-<!ENTITY Ctr_closegeneral	"General close icons">
+<!ENTITY Ctr_closegeneral	"Ogólne ikony zamykania">
 
 <!ENTITY Ctr_tabsep_def		"Domyślne separatory kart">
 <!ENTITY Ctr_fxmockup		"Makieta Firefoksa">
