--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -111,6 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ocultar el menú historial de estos botones al pulsarlos con el ratón">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas de texto (atrás, adelante...)">
+<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos de botones de barra de herramientas predeterminados">
 <!ENTITY Ctr_wincontrols	"Controles de ventana en pantalla completa móviles">
 <!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vacío y punteado) con uno de hoja en blanco">
