--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -111,6 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ocultar o Menu Histórico ao Pressionar o Mouse">
 <!ENTITY Ctr_bf_space		"Reduzir o Espaço Entre os Botões (Se Possível)">
 <!ENTITY Ctr_noconicons		"Substituir os Ícones do Menu de Contexto da Página por Rótulos (Voltar, Avançar, Parar, Recarregar, Página de Favoritos)">
+<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
 <!ENTITY Ctr_svgfilters		"Cores SVG para os Ícones dos Botões da Barra de Ferramentas Padrão">
 <!ENTITY Ctr_wincontrols	"Controles Móveis da Janela em Tela Cheia">
 <!ENTITY Ctr_emptyfavicon2	"Substituir o Favicon Genérico (Vazio e Pontilhado) Pelo Favicon de Folha">
