--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -111,6 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"鼠标按下时隐藏历史菜单">
 <!ENTITY Ctr_bf_space		"减少按钮之间的空白 (如果可以)">
 <!ENTITY Ctr_noconicons		"页面右键菜单: 使用标签来替代图标 (后退, 前进...)">
+<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_emptyfavicon2	"使用空白页面图标来代替常规图标(空白或虚线框)">
