--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -53,7 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
-<!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
 <!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Prozny faworitowy symbol wótnowiś (jolic sedło njepóbitujo žeden)">
 <!ENTITY Ctr_noemptypticon	"Prozny faworitowy symbol z pśipětego rejtarka">
@@ -65,7 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Na zachopjeńku rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtar schowaś">
-<!ENTITY Ctr_closei_def		"Default icons">
+<!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
 
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Njejo widobny w titelowej rědce Windows!">
 <!ENTITY Ctr_appbuttonI2	"Tłocaškowe barwy su jano widobne na titelowej rědce a rejtarkowej rědce!">
 <!ENTITY Ctr_appbutmhi		"Wuša pozicija (jolic jo na rejtarkowej rědce)">
-<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
+<!ENTITY Ctr_appbautocol	"Standardnu barwu a barwu Aurora / Nightly awtomatiski nastajiś">
 <!ENTITY Ctr_appbutbdl		"Ramiki a slězynowe barwy schowaś">
 <!ENTITY Ctr_dblclclosefx	"Dwójne kliknjenje zacynja aktualne wokno">
 <!ENTITY Ctr_appbclmmenus	"Kliknjobne menije w tłocaškowem meniju (Nowy rejtark, Śišćaś...)">
@@ -111,7 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
-<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
+<!ENTITY Ctr_altoptionsp	"Bok nastajenjow: alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_emptyfavicon2	"Prozny a dypkaty faworitowy symbol pśez łopjenowy symbol wuměniś">
@@ -142,9 +142,9 @@
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
 <!ENTITY Ctr_alt_addonsp	"Bok 'wěcej info' dodankow: alternatiwny naglěd">
 <!ENTITY Ctr_alt_addonsm	"Zastojnik dodankow: alternatiwny naglěd">
-<!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
+<!ENTITY Ctr_am_nowarning	"Zastojnik dodankow: Warnowanja schowaś">
 <!ENTITY Ctr_addonversion	"Pśeglěd zastojnika dodankow: wersiju dodanka pokazaś">
-<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
+<!ENTITY Ctr_xpinstallui	"Zastojnik dodankow: stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tłocašk menija cytańskich znamjenjow: naglěd dialogowego menija">
 <!ENTITY Ctr_bmbutnotext	"Tłocašk menija cytańskich znamjenjow: tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: śišćarski pśeglěd pśeskócyś">
@@ -153,9 +153,9 @@
 <!ENTITY Ctr_extraurlkeycb	"Pśidatne adresowe pólo wócyniś (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Pólowy meni: Tekst tłocaškow schowaś">
 <!ENTITY Ctr_menupopupscr	"Wuskokujuce menije: suwate rědki město suwatych šypkow pokazaś">
-<!ENTITY Ctr_closegeneral	"General close icons">
+<!ENTITY Ctr_closegeneral	"Powšykne zacynjańske symbole">
 
-<!ENTITY Ctr_tabsep_def		"Default tab separators">
+<!ENTITY Ctr_tabsep_def		"Standardne rejtarkowe źěleńske smužki">
 <!ENTITY Ctr_fxmockup		"Nacerjenje &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Běła barwa za rejtarkowe tłocaški (zacyniś, nowy, kupki, wšykne nalicyś)">
 <!ENTITY Ctr_tabmokcolor2	"Běła barwa a śamna wóseń za tekst na njeaktiwnych rejtarkach">
@@ -239,7 +239,7 @@
 <!ENTITY Ctr_menubarnofog	"Slězynowu barwu/młu wótpóraś (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barwy 'Blue Aero' za głowne rědki a rejtarki">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Nawigacisku rědku schowaś">
 <!ENTITY Ctr_nobookbarbg	"Rědka cytańskich znamjenjow: slězynowu barwu wótpóraś">
 <!ENTITY Ctr_bookbarfs		"Rědka cytańskich znamjenjow: w modusu połneje wobrazowki">
@@ -258,7 +258,7 @@
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
 <!ENTITY Ctr_animation		"Animacija">
-<!ENTITY Ctr_tabthrobber	"Default loading image">
+<!ENTITY Ctr_tabthrobber	"Standardny zacytowański wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Cytańske znamje pśidaś">
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
 <!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka (nastajenje about:config)">
@@ -290,8 +290,8 @@
 <!ENTITY Ctr_e_prefsui		"Nastajenja w rejtarku">
 <!ENTITY Ctr_e_readermode	"Cytański modus">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
-<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
+<!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Gaž znjemóžnijośo toś to nastajenje, wótpórajo se 'symbol za awdiowótgrawanje' z rejtarkow.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
