--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -111,7 +111,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
-<!ENTITY Ctr_altoptionsp	"Options page: alternative appearance">
+<!ENTITY Ctr_altoptionsp	"Strona opcji: alternatywny wygląd">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
 <!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
@@ -138,10 +138,10 @@
 <!ENTITY Ctr_iat_notf_vt	"Nie dla pionowych pasków narzędzi">
 <!ENTITY Ctr_cpanelmenus	"Menu panelu: widok kompaktowy (zakładki, historia itp.)">
 <!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
-<!ENTITY Ctr_alt_newtabp	"Strona nowej karty: wygląd alternatywny">
+<!ENTITY Ctr_alt_newtabp	"Strona nowej karty: alternatywny wygląd">
 <!ENTITY Ctr_addonmanager	"Menedżer dodatków">
-<!ENTITY Ctr_alt_addonsp	"Strona dodatków 'więcej informacji': wygląd alternatywny">
-<!ENTITY Ctr_alt_addonsm	"Menedżer dodatków: wygląd alternatywny">
+<!ENTITY Ctr_alt_addonsp	"Strona dodatków 'więcej informacji': alternatywny wygląd">
+<!ENTITY Ctr_alt_addonsm	"Menedżer dodatków: alternatywny wygląd">
 <!ENTITY Ctr_am_nowarning	"Listy dodatków menedżera dodatków: ukryj ostrzeżenia">
 <!ENTITY Ctr_addonversion	"Listy dodatków menedżera dodatków: wyświetl wersję dodatku">
 <!ENTITY Ctr_xpinstallui	"Menedżer dodatków: stare okno instalacji dodatku (ustawienie about:config)">
